Revision history for Perl extension Math::Polynom

0.01  2006-10-25
	- first working version

0.02  2006-12-14
        - added the secant method
        - renamed solve() into newton_raphson()

0.03  2006-12-15
        - added Brent's method
        - added xpos and xneg, automatically set by eval()
        - improved tests

0.04  2007-01-08
        - fix dependency in makefile

0.05  2007-01-12
        - fix a bug in nan identification

0.06  2007-02-20
        - handle cases when the root finding algorithm converges toward
          a value that is not a root (secant is known to do it in rare
          cases)
        - updated POD
        - more tests

0.07  2007-02-22
        - fix tests to support running on more platforms

0.08  2007-04-11
	- added $DEBUG output