@@ -1,14 +1,25 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+--- #YAML:1.0
 name:         Math-Polynom
-version:      0.07
-version_from: lib/Math/Polynom.pm
-installdirs:  site
+abstract:     Operations on polynomials
+version:      0.08
+author:
+    - Erwan Lemonnier <erwan@cpan.org>
+license:      perl
+distribution_type: module
 requires:
     accessors:                     0
     Carp:                          0
     constant:                      0
     Data::Dumper:                  2.10
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+build_requires:
+    Test::More:                    0
+    Test::Pod:                     0
+    Test::Pod::Coverage:           0
+ressources:
+    license: http://dev.perl.org/licenses/
+    homepage: http://sourceforge.net/projects/xirr4perl
+    bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Math-Polynom
+    repository: https://sourceforge.net/cvs/?group_id=193420
+meta-spec:
+   version: 1.3
+   url: http://module-build.sourceforge.net/META-spec-v1.3.html
