@@ -30,3 +30,5 @@ Revision history for Perl extension Math::Polynom
 
 0.08  2007-04-11
 	- added $DEBUG output
+        - updated META.yml to version 1.3 of the META.yml spec
+        - added examples
